compiled into static pages

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <h3>my leaf, your leaf</h3>
 <p>The header of this blog is by California artist, Michael Martin. All other work is by me.</p>
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>User Experience Designer. Human. Company Starter. Mobile Lover.</p>
+<p>User Experience Designer. jsdilfj. lsidjflsdf. sdifjsd.</p>
 <h3>About this site</h3>
 <p>This site was made with Harp.js, HTML5, LESS, with Jade templating and copious Markdown for content.</p>
 </article><div class="connect"><p><a href="https://twitter.com/_ndrw">Twitter</a></p><p><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></p><p><a href="http://instagram.com/andrewnonumbers">Instagram</a></p><p><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></p><p><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></p></div></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
