--- a/about-text.html
+++ b/about-text.html
@@ -4,7 +4,7 @@
 <h3>my leaf, your leaf</h3>
 <p>The header of this blog is by California artist, Michael Martin. All other work is by me.</p>
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>User Experience Designer. Human. Company Starter. Mobile Lover.</p>
+<p>User Experience Designer. jsdilfj. lsidjflsdf. sdifjsd.</p>
 <h3>About this site</h3>
 <p>This site was made with Harp.js, HTML5, LESS, with Jade templating and copious Markdown for content.</p>
 </div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
