some minor late night edits, compiled and deloyed

--- a/a/one-line-book-reviews.html
+++ b/a/one-line-book-reviews.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>One-line book reviews</h1>
-<h3>Product Design for the Web: Principles of Designing &amp; Releasing Web Products by Randy J. Hunt, Creative Director, Etsy &copy;2014</h3>
-<h3>Usable Usability by Eric Reiss &copy;2012</h3>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>One-line UX book reviews</h1>
+<h3>Freehand: Sketching Tips and Tricks Drawn From Art</h3>
+<p>Helen Birch (c) 2013</p>
+<h3>Product Design for the Web: Principles of Designing &amp; Releasing Web Products</h3>
+<p>Randy J. Hunt, Creative Director, Etsy &copy;2014</p>
+<h3>Usable Usability</h3>
+<p>Eric Reiss &copy;2012</p>
+<p>Practical and accessibly written with rich anecdotes but some technical inaccuracies. The &quot;10 ways&quot; list at the end of each chapter is helpful. </p>
 <h3>Digital Design Essentials by Raj Lal &copy;2013</h3>
-<p>100 colorful case studies of questionable taste and usefulness.</p>
-<h3>Information Architecture: Blueprint for the Web by Christina Wodtke</h3>
-<p>Convoluted and rather questionable advice on information architecture.</p>
+<p>100 colorful case studies with questionable taste and usefulness.</p>
+<h3>Seductive interaction design creating playful, fun, and effective user experiences by Stephen P. Anderson.</h3>
+<h3>Information Architecture: Blueprint for the Web by Christina Wodtke and Austin Govella</h3>
+<p>Convoluted advice on information architecture.</p>
 <h3>The Design of Everyday Things by Don Norman</h3>
-<p>A good book if you don&#39;t mind not having visuals.</p>
+<p>Either you&#39;ve already read it or you&#39;ve been meaning to read it.</p>
 <h3>The HTML Pocket Guide by Bruce Hyslop</h3>
-<p>Useful companion to HTML5 spec, with detailed discussions of semantics and why things came to be.</p>
+<p>Very useful alternative to reading the dry HTML5 spec, with detailed discussions of semantics and how things came to be.</p>
 <h3>Don&#39;t Make Me Think by Steve Krug</h3>
-<p>Excellent, fun introduction to thinking about usability.</p>
+<p>Fun introduction to thinking about usability.</p>
 </div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
