--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>About</h1><article><blockquote>
-<p>The more you know, the more you know, and the more you don&#39;t know.</p>
-</blockquote>
-<h3>my leaf, your leaf</h3>
-<p>The header of this blog is by California artist, Michael Martin. All other work is by me.</p>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>About</h1><article><!---###My leaf, your leaf
+The header of this site is by California artist, Michael Martin. All other work is by me.-->
+
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>User Experience Designer. jsdilfj. lsidjflsdf. sdifjsd.</p>
+<p>I&#39;m a UX/Product Designer with an interest in many other topics.</p>
+<p>For more information, you can see <a href="/weeResume/" title="weeResume">my resume here</a>.</p>
 <h3>About this site</h3>
-<p>This site was made with Harp.js, HTML5, LESS, with Jade templating and copious Markdown for content.</p>
+<p>I made this site with Harp.js, HTML5, LESS, Jade templating and Markdown for content. I&#39;m not a developer but I can code and I have a pretty long background in tech.</p>
+<p>Press features: VentureBeat / Chicago Tribune / SunTimes</p>
 </article><div class="connect"><p><a href="https://twitter.com/_ndrw">Twitter</a></p><p><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></p><p><a href="http://instagram.com/andrewnonumbers">Instagram</a></p><p><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></p><p><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></p></div></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
