edits to weeResume and other changes

--- a/a/about.html
+++ b/a/about.html
@@ -2,9 +2,9 @@
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>I&#39;m a UX/Product Designer with an interest in many other topics.</p>
-<p>For more information, you can see <a href="/weeResume/" title="weeResume">my resume here</a>.</p>
+<p>I&#39;m a student with a strong interest in designing digital products and experiences. In the past, I&#39;ve . However, what I truly love is experiences, behavior, and humans. </p>
 <h3>About this site</h3>
-<p>I made this site with Harp.js, HTML5, LESS, Jade templating and Markdown for content. I&#39;m not a developer but I can code and I have a pretty solid background in technology.</p>
+<p>This site was made with HTML, LESS, Jade, Harp.js, and Markdown. I&#39;m not a front-end developer but I can write some code.</p>
+<p>I got sick of Wordpress and found the excellent Harp.js</p>
 <p>Press features: VentureBeat / Chicago Tribune / SunTimes</p>
 </article><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
