small copy change

--- a/weeResume/index.html
+++ b/weeResume/index.html
@@ -13,7 +13,7 @@
 
 		<header class="unit span-grid">
 			<h1 class="fullname">Andrew S. Chen</h1>
-			<h2 class="byline">Designer of Experiences + Learner for Life</h2>
+			<h2 class="byline">Product Designer + Learner for Life</h2>
 		</header>
 
 		<ul class="contact-info unit span-grid">
