--- a/a/about-text.html
+++ b/a/about-text.html
@@ -7,4 +7,10 @@ The header of this site is by California artist, Michael Martin. All other work 
 <p>This site was made with HTML, LESS, Jade, Harp.js, and Markdown. I&#39;m not a front-end developer but I can write some code.</p>
 <p>I got sick of Wordpress and found the excellent Harp.js</p>
 <p>Press features: VentureBeat / Chicago Tribune / SunTimes</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');</script></body></html>
