--- a/a/one-line-book-reviews.html
+++ b/a/one-line-book-reviews.html
@@ -16,4 +16,10 @@
 <p>Useful alternative to reading the HTML5 spec, with detailed discussion of semantics and how things came to be.</p>
 <h3>Don&#39;t Make Me Think by Steve Krug</h3>
 <p>A light introduction to thinking about usability.</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');</script></body></html>
