--- a/a/web-development-notes.html
+++ b/a/web-development-notes.html
@@ -235,4 +235,10 @@ Jade is whitespace sensitive, so there&#39;s no need to close your tags</p>
 <h3>Server and below</h3>
 <p>The site’s hosted on a machine in his house, and is served over a DSL connection.
 He says Node and/or Pulsar are doing well enough (150 connections using ~50 MB of RAM and 40% CPU)- apparently he just doesn’t have enough bandwidth to get everything out to everyone.</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');</script></body></html>
