--- a/a/what-is-ux-design.html
+++ b/a/what-is-ux-design.html
@@ -1269,4 +1269,10 @@ footer a {
   		var s = skrollr.init({forceHeight:false});
 </script>
 
-</body></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</body></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');</script></body></html>
