--- a/a/about.html
+++ b/a/about.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>About</h1><article><!---###My leaf, your leaf
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>About</h1><article><!---###My leaf, your leaf
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
@@ -7,10 +14,4 @@ The header of this site is by California artist, Michael Martin. All other work 
 <p>This site was made with HTML, LESS, Jade, Harp.js, and Markdown. I&#39;m not a front-end developer but I can write some code.</p>
 <p>I got sick of Wordpress and found the excellent Harp.js</p>
 <p>Press features: VentureBeat / Chicago Tribune / SunTimes</p>
-</article><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
-ga('send', 'pageview');</script></body></html>
+</article><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
