--- a/a/one-line-book-reviews.html
+++ b/a/one-line-book-reviews.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>One-line UX book reviews</h1>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="/firstToastGrid.css"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
+ga('send', 'pageview');
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>One-line UX book reviews</h1>
 <h3>Freehand: Sketching Tips and Tricks Drawn From Art by Helen Birch (c) 2013</h3>
 <p>Handbook of ideas and basics of visual art. Won&#39;t make you a better artist but will give you a better grasp of visual art, especially for those without an art background.</p>
 <h3>Product Design for the Web: Principles of Designing &amp; Releasing Web Products by Randy J. Hunt, Creative Director, Etsy (c) 2014</h3>
@@ -16,10 +23,4 @@
 <p>Useful alternative to reading the HTML5 spec, with detailed discussion of semantics and how things came to be.</p>
 <h3>Don&#39;t Make Me Think by Steve Krug</h3>
 <p>A light introduction to thinking about usability.</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
-ga('send', 'pageview');</script></body></html>
+</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
