--- a/weeResume/index.html
+++ b/weeResume/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code at the top--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
