forgot to compile it; compiled it

--- a/a/about-text.html
+++ b/a/about-text.html
@@ -5,13 +5,15 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><!---###My leaf, your leaf
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><!---###My leaf, your leaf
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>I&#39;m a student with a strong interest in designing digital products and experiences. In the past, I&#39;ve . However, what I truly love is experiences, behavior, and humans. </p>
+<p>I&#39;m a student with a strong interest in designing digital products and experiences. In the past, I&#39;ve . However, what I truly love is experiences, products, behavior, and humans. </p>
+<p>I&#39;m a student interested in the intersection of education and design. </p>
+<p>I currently live in California, but have previously inhabited places including Chicago, Florida, New York, Montreal, Beijing, and Vancouver.</p>
 <h3>About this site</h3>
-<p>This site was made with HTML, LESS, Jade, Harp.js, and Markdown. I&#39;m not a front-end developer but I can write some code.</p>
-<p>I got sick of Wordpress and found the excellent Harp.js</p>
-<p>Press features: VentureBeat / Chicago Tribune / SunTimes</p>
+<p>This site was made with some HTML5, LESS, Jade, Harp.js (which is excellent and I highly recommend to everyone), and Markdown. I&#39;m not a developer but I can write some code.</p>
+<p>This site has previously been run in Wordpress (2010-2013) and Weebly (2008-2009)</p>
+<p>Press features: VentureBeat / Chicago Tribune / SunTimes / TechCrunch</p>
 </div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
