--- a/a/one-line-book-reviews.html
+++ b/a/one-line-book-reviews.html
@@ -5,7 +5,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>One-line UX book reviews</h1>
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>One-line UX book reviews</h1>
 <h3>Freehand: Sketching Tips and Tricks Drawn From Art by Helen Birch (c) 2013</h3>
 <p>Handbook of ideas and basics of visual art. Won&#39;t make you a better artist but will give you a better grasp of visual art, especially for those without an art background.</p>
 <h3>Product Design for the Web: Principles of Designing &amp; Releasing Web Products by Randy J. Hunt, Creative Director, Etsy (c) 2014</h3>
