--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><div id="thebar"><form action="https://madmimi.com/signups/subscribe/97711" id="mad_mimi_signup_form" method="post" target="_blank">
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><div id="thebar"><form action="https://madmimi.com/signups/subscribe/97711" id="mad_mimi_signup_form" method="post" target="_blank">
    <div class="required">
       <label for="signup_email">Sign up for my emails</label>
       <input class="required" data-invalid-email="This field is invalid" data-required-field="This field is required" id="signup_email" name="signup[email]" placeholder="you@something.com" type="text"/>
