--- a/a/previous.html
+++ b/a/previous.html
@@ -5,7 +5,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><h1>Previously...</h1>
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>Previously...</h1>
 <ul>
 <li><p>1st place, IDEO </p>
 </li>
