--- a/a/what-is-ux-design.html
+++ b/a/what-is-ux-design.html
@@ -5,7 +5,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/">ndrw.me</a></p><head>
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,100,300,400italic' rel='stylesheet' type='text/css'>
 		
 	<style>
