another round of changes

--- a/a/content-consumption.html
+++ b/a/content-consumption.html
@@ -74,4 +74,4 @@ ga('send', 'pageview');
 <li>NPR: Car Talk</li>
 <li>KQED Science News</li>
 </ul>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
