--- a/a/one-line-book-reviews.html
+++ b/a/one-line-book-reviews.html
@@ -23,4 +23,4 @@ ga('send', 'pageview');
 <p>Useful alternative to reading the HTML5 spec, with detailed discussion of semantics and how things came to be.</p>
 <h3>Don&#39;t Make Me Think by Steve Krug</h3>
 <p>A light introduction to thinking about usability.</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
