--- a/a/web-development-notes.html
+++ b/a/web-development-notes.html
@@ -242,4 +242,4 @@ Jade is whitespace sensitive, so there&#39;s no need to close your tags</p>
 <h3>Server and below</h3>
 <p>The site’s hosted on a machine in his house, and is served over a DSL connection.
 He says Node and/or Pulsar are doing well enough (150 connections using ~50 MB of RAM and 40% CPU)- apparently he just doesn’t have enough bandwidth to get everything out to everyone.</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
