--- a/a/what-is-ux-design.html
+++ b/a/what-is-ux-design.html
@@ -1276,4 +1276,4 @@ footer a {
   		var s = skrollr.init({forceHeight:false});
 </script>
 
-</body></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</body></div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
