--- a/a/about-text.html
+++ b/a/about-text.html
@@ -16,4 +16,4 @@ The header of this site is by California artist, Michael Martin. All other work 
 <p>This site was made with some HTML5, LESS, Jade, Harp.js (which is excellent and I highly recommend to everyone), and Markdown. I&#39;m not a developer but I can write some code.</p>
 <p>This site has previously been run in Wordpress (2010-2013) and Weebly (2008-2009)</p>
 <p>Press features: VentureBeat / Chicago Tribune / SunTimes / TechCrunch</p>
-</div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
