--- a/a/about.html
+++ b/a/about.html
@@ -5,7 +5,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>About</h1><article><!---###My leaf, your leaf
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>About</h1><img src="/img/Andrew ChenIMG1.png"/><article><!---###My leaf, your leaf
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
@@ -16,4 +16,4 @@ The header of this site is by California artist, Michael Martin. All other work 
 <p>This site was made with some HTML5, LESS, Jade, Harp.js (which is excellent and I highly recommend to everyone), and Markdown. I&#39;m not a developer but I can write some code.</p>
 <p>This site has previously been run in Wordpress (2010-2013) and Weebly (2008-2009)</p>
 <p>Press features: VentureBeat / Chicago Tribune / SunTimes / TechCrunch</p>
-</article><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><footer><p>Made by <a href="/">ndrw.me</a></p></footer></div></body></html>
+</article><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
