--- a/a/favorites.html
+++ b/a/favorites.html
@@ -5,4 +5,13 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>404</h1><h3>Whoops. Looks like what you're looking for can't be found. :(</h3></div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><section>
+	<a href="http://matt.might.net/articles/phd-school-in-pictures/">Matt Might's diagram of knowledge</a>
+
+</section>
+
+<section>
+	<iframe src="//player.vimeo.com/video/48437619?portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/48437619">Technori Pitch: August 2012 Keynote - Emerson Spartz</a> from <a href="http://vimeo.com/user11225890">Technori</a></p>
+</section>
+
+</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
