--- a/a/about-text.html
+++ b/a/about-text.html
@@ -9,11 +9,10 @@ ga('send', 'pageview');
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>I&#39;m a student with a strong interest in designing digital products and experiences. In the past, I&#39;ve . However, what I truly love is experiences, products, behavior, and humans. </p>
-<p>I&#39;m a student interested in the intersection of education and design. </p>
-<p>I currently live in California, but have previously inhabited places including Chicago, Florida, New York, Montreal, Beijing, and Vancouver.</p>
+<p>I&#39;m a student interested in design, products, behavior, and humans.</p>
+<p>I currently live in California, but have previously inhabited places including Chicago, Florida, New York, Vancouver, Montreal, and Beijing.</p>
+<p>I will write a longer description here later.</p>
 <h3>About this site</h3>
-<p>This site was made with some HTML5, LESS, Jade, Harp.js (which is excellent and I highly recommend to everyone), and Markdown. I&#39;m not a developer but I can write some code.</p>
-<p>This site has previously been run in Wordpress (2010-2013) and Weebly (2008-2009)</p>
-<p>Press features: VentureBeat / Chicago Tribune / SunTimes / TechCrunch</p>
+<p>This site was previously run on Weebly (2008-2009) and self-hosted Wordpress (2010-2013).</p>
+<p>The current site was made with some HTML5, LESS, Jade, and Harp.js (which is excellent and I highly recommend to everyone). I&#39;m not a developer but I can write some code.</p>
 </div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
