--- a/weeResume/index.html
+++ b/weeResume/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code at the top--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!DOCTYPE html><html><head><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic"><link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald|Slabo+27px"><!--CSS reset + grid--><link rel="stylesheet" href="/main.css"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><!--Google Analytics tracking code at the top--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -8,7 +8,7 @@ ga('send', 'pageview');
 </script><div class="container"><p class="mainlink"><a href="/">ndrw.me</a></p><head>
 	<meta charset="UTF-8">
 
-	<title>My weeResume</title>
+	<title>ndrw.me weeResume</title>
 
 	<link href="firstToast.css" rel="stylesheet" media="screen"> <!--I'll figure this out later, since it's repeating a lot of the firstToast.css from the main site, I should pull out the needed CSS declarations and inherit the rest-->
 
@@ -19,7 +19,7 @@ ga('send', 'pageview');
 	<div class="grid">
 
 		<header class="unit span-grid">
-			<h1 class="fullname">Bilius S. Chen</h1>
+			<h1 class="fullname">Andrew S. Chen</h1>
 			<h2 class="byline">There are secrets left in the world.</h2>
 		</header>
 
@@ -44,7 +44,7 @@ ga('send', 'pageview');
 				<h2>About</h2>
 			</div>
 			<div class="unit three-of-four">
-				<p>I&#39;m a designer with a background in tech products and startups. I want to change the world, and my best way for doing that is design. I like to learn broadly, make things, and create better experiences.</p>
+				<p>I&#39;m a designer with a background in tech and startup companies. I&#39;ve led design on several projects, and believe that it is my most direct way of impacting the world. I like to learn broadly, make things, and create exceptional experiences.</p>
 			</div>
 
 			<div class="unit one-of-four left">
