added articles, reduced junk and clutter, polished a lot of things

--- a/404.html
+++ b/404.html
@@ -5,4 +5,4 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>404</h1><h3>Whoops. Looks like what you're looking for can't be found. :(</h3></div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>404</h1><h3>Whoops. Looks like what you're looking for can't be found. :(</h3></div></div></body></html>
