--- a/a/favorites.html
+++ b/a/favorites.html
@@ -27,4 +27,4 @@ ga('send', 'pageview');
 
 	
 </div>
-</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
+</div></div></body></html>
