--- a/a/about-text.html
+++ b/a/about-text.html
@@ -9,10 +9,10 @@ ga('send', 'pageview');
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>I&#39;m a student interested in design, products, behavior, and humans.</p>
+<p>I&#39;m interested in design, products, behavior, and humans.</p>
 <p>I currently live in California, but have previously inhabited places including Chicago, Florida, New York, Vancouver, Montreal, and Beijing.</p>
 <p>I will write a longer description here later.</p>
 <h3>About this site</h3>
-<p>This site was previously run on Weebly (2008-2009) and self-hosted Wordpress (2010-2013).</p>
-<p>The current site was made with some HTML5, LESS, Jade, and Harp.js (which is excellent and I highly recommend to everyone). I&#39;m not a developer but I can write some code.</p>
-</div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
+<p>This site was previously powered by Weebly (2008-2009) and self-hosted Wordpress (2010-2013).</p>
+<p>The current site was put together using Harp.js and some HTML5, LESS, Jade, etc. I&#39;m not a developer but I can write some code.</p>
+</div></div></body></html>
