--- a/a/about.html
+++ b/a/about.html
@@ -5,14 +5,14 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 ga('create', 'UA-15898503-2', 'andrewnonumbers.github.io');
 ga('send', 'pageview');
-</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>About</h1><img src="/img/10410984_688582481190669_9113513446670072781_n.jpg"/><br><br><br><article><!---###My leaf, your leaf
+</script><div class="container"><div class="grid"><p class="mainlink"><a href="/" class="ndrwlink">ndrw.me</a></p><h1>About</h1><div class="picme"> <img src="/img/10410984_688582481190669_9113513446670072781_n.jpg"/></div><br><br><br><article><!---###My leaf, your leaf
 The header of this site is by California artist, Michael Martin. All other work is by me.-->
 
 <h2>Hi, I&#39;m Andrew.</h2>
-<p>I&#39;m a student interested in design, products, behavior, and humans.</p>
+<p>I&#39;m interested in design, products, behavior, and humans.</p>
 <p>I currently live in California, but have previously inhabited places including Chicago, Florida, New York, Vancouver, Montreal, and Beijing.</p>
 <p>I will write a longer description here later.</p>
 <h3>About this site</h3>
-<p>This site was previously run on Weebly (2008-2009) and self-hosted Wordpress (2010-2013).</p>
-<p>The current site was made with some HTML5, LESS, Jade, and Harp.js (which is excellent and I highly recommend to everyone). I&#39;m not a developer but I can write some code.</p>
-</article><br><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul><br><br><br><br></div><footer class="sitewide"><p><!--Made by <a href="/">ndrw.me</a>--></p></footer></div></body></html>
+<p>This site was previously powered by Weebly (2008-2009) and self-hosted Wordpress (2010-2013).</p>
+<p>The current site was put together using Harp.js and some HTML5, LESS, Jade, etc. I&#39;m not a developer but I can write some code.</p>
+</article><br><div class="personallinks"><ul class="majorlist"><li><a href="https://twitter.com/_ndrw">Twitter</a></li><li><a href="http://linkedin.com/in/andrewnonumbers">LinkedIn</a></li><li><a href="http://instagram.com/andrewnonumbers">Instagram</a></li><li><a href="http://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a></li><li><a href="/resume">Resume</a></li><li><a href="mailto:andrewnonumbers+site@gmail.com">Email Me</a></li></ul></div><br><br><br><br></div></div></body></html>
