--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@ ga('send', 'pageview');
 
 	<title>ndrw.me - Andrew's resume</title>
 
-	<link href="firstToast.css" rel="stylesheet" media="screen"> <!--I'll figure this out later, since it's repeating a lot of the firstToast.css from the main site, I should pull out the needed CSS declarations and inherit the rest-->
+	<link href="firstToast.css" rel="stylesheet"> <!--I'll figure this out later, since it's repeating a lot of the firstToast.css from the main site, I should pull out the needed CSS declarations and inherit the rest-->
 
 	<link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore|Arizonia' rel='stylesheet' type='text/css'>
 </head>
